# iotc-zephyr-demos

./: .gitignore  LICENSE  README.md  west.yml
boards/frdm-imx93/: QUICKSTART.md
boards/frdm-mcxn947/: QUICKSTART.md
boards/mimxrt1170-evkb/: QUICKSTART.md
boards/sam-e54-xpro/: QUICKSTART.md
common/: README.md
demos/c2d-led/: CMakeLists.txt  DEMO.md  README.md  prj.conf  sample.yaml
demos/c2d-led/boards/: mimxrt1170_evk_mimxrt1176_cm7.conf  same54_xpro.conf
demos/c2d-led/src/: main.c
demos/click-telemetry/: CMakeLists.txt  DEMO.md  README.md  prj.conf  sample.yaml
demos/click-telemetry/boards/: frdm_mcxn947_mcxn947_cpu0.conf  frdm_mcxn947_mcxn947_cpu0.overlay  frdm_mcxn947_mcxn947_cpu0_ns.conf  frdm_mcxn947_mcxn947_cpu0_ns.overlay  same54_xpro.conf  same54_xpro.overlay
demos/click-telemetry/src/: main.c
demos/eiq-pdm-airflow/: CMakeLists.txt  README.md  prj.conf  sample.yaml
demos/eiq-pdm-airflow/boards/: frdm_mcxn947_mcxn947_cpu0.overlay
demos/eiq-pdm-airflow/src/: main.c
demos/eiq-pdm-vibration/: CMakeLists.txt  DEMO.md  QUICKSTART.md  README.md  connect.conf  connect.overlay  prj.conf  sample.yaml
demos/eiq-pdm-vibration/boards/: frdm_mcxn947_mcxn947_cpu0.overlay
demos/eiq-pdm-vibration/model/: README.md  TimeSeries.h  metadata.json
demos/eiq-pdm-vibration/src/: main.c
demos/eiq-pdm-vibration/tools/: tss_convert.py
demos/eiq-pdm-vibration/training/: README.md  capture-session.csv
demos/eiq-pdm-vibration/training/tss/: balanced.csv  both.csv  idle.csv  unbalanced.csv
demos/ml-model-update/: CMakeLists.txt  DEMO.md  README.md  prj.conf  sample.yaml
demos/ml-model-update/boards/: same54_xpro.conf  same54_xpro.overlay
demos/ml-model-update/models/: model_v1_ambient.b64  model_v1_ambient.cmd  model_v2_comfort.b64  model_v2_comfort.cmd  model_v3_nightlight.b64  model_v3_nightlight.cmd  model_v4_hotalarm.b64  model_v4_hotalarm.cmd  model_v5_fusion.b64  model_v5_fusion.cmd
demos/ml-model-update/src/: main.c  model_builtin.h
demos/ml-model-update/tools/: build_model.py  make_icons.py
demos/quickstart/: CMakeLists.txt  DEMO.md  README.md  prj.conf
demos/quickstart/boards/: frdm_imx93_mimx9352_a55.conf  frdm_imx93_mimx9352_a55.overlay  frdm_mcxn947_mcxn947_cpu0_ns.conf  mimxrt1170_evk_mimxrt1176_cm7.conf  same54_xpro.conf
demos/quickstart/src/: main.c  quickstart_credentials.h
demos/telemetry/: CMakeLists.txt  DEMO.md  Kconfig  README.md  prj.conf  sample.yaml
demos/telemetry/boards/: frdm_imx93_mimx9352_a55.conf  frdm_imx93_mimx9352_a55.overlay  frdm_mcxn947_mcxn947_cpu0.overlay  same54_xpro.conf
demos/uart-telemetry-source/: CMakeLists.txt  DEMO.md  README.md  prj.conf  sample.yaml
demos/uart-telemetry-source/boards/: frdm_mcxe31b.conf  frdm_mcxw72.conf
demos/uart-telemetry-source/src/: main.c
templates/: click-demos-device-template.JSON  eiq-pdm-vibration-template.json  ml-model-update-template.json  zephyr-telemetry-template.json
